--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<ul>
 
 									<li>
-										<a class="button x-small" href="https://github.com/calvinlcchen\KidArtistPotential-Web" target="_blank"> <i class="fa fa-code"></i> </a>
+										<a class="button x-small" href="https://github.com/acerwebai/KidArtistPotential-Web" target="_blank"> <i class="fa fa-code"></i> </a>
 									</li>
 
 
@@ -366,7 +366,7 @@
 										</div>
 										<div class="social-icons social-border color-hover float-right mt-40 xs-mt-0 xs-mb-20">
 											<ul>
-												<a class="button x-small" href="https://calvinlcchen.github.io/KidArtistPotential-Web">Get Style</a>
+												<a class="button x-small" href="https://acerwebai.github.io/KidArtistPotential-Web">Get Style</a>
 											</ul>
 										</div>
 
