--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 											<ul>
 												<li>
 
-													<img class="image" id="taipei101" src='images/taipei101.jpg' alt="Taipei 101 Fireworks 2017" href="https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc" onclick="updateInputImg(this);
+													<img class="image" id="taipei101" src='images/taipei101.jpg' alt="Taipei 101 " href="https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc" onclick="updateInputImg(this);
 				 document.getElementById('photo-name').innerText = this.alt;
-				 $('#photo-link').attr('href','https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc');
+				 $('#photo-link').attr('href','');
 				 " />
 													<!--    			 <div class="content-photo-name">Taipei101 <a href="https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc" target="_blank"><i class="fa fa-link"></i></a></div>-->
 
