--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 									<div class="center-container">
 										<img id="input-img" src='images/taipei101.jpg' />
 										<!--      <div id="input-source" class="reverse-img"></div>-->
-										<div class="photo-name-box"><span id="photo-name">Taipei 101 Fireworks 2017</span> <a href="https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc" id="photo-link" target="_blank"><img src="images/cc_icon_white.png"/></a></div>
+										<div class="photo-name-box"><span id="photo-name">Taipei 101 </span> <a href="" id="photo-link" target="_blank"><img src="images/cc_icon_white.png"/></a></div>
 									</div>
 									<!--    <div class="mg-250"></div>-->
 									<div class="content-menu" style=" width: 360px;overflow: auto;">
