--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 											<ul>
 												<li>
 
-													<img class="image" id="taipei101" src='images/taipei101.jpg' alt="Taipei 101 " href="https://ccsearch.creativecommons.org/photos/1e7c0dd5-ff62-49f0-ba0e-b263a0253dfc" onclick="updateInputImg(this);
+													<img class="image" id="taipei101" src='images/taipei101.jpg' alt="Taipei 101 " href="" onclick="updateInputImg(this);
 				 document.getElementById('photo-name').innerText = this.alt;
 				 $('#photo-link').attr('href','');
 				 " />
@@ -215,17 +215,17 @@
 												<li>
 													<img class="image" id="school1" src='images/school1.JPG' alt="school" onclick="updateInputImg(this);
     			document.getElementById('photo-name').innerText = this.alt; 
-    			$('#photo-link').attr('href','https://ccsearch.creativecommons.org/photos/37b4f240-02c9-4b2e-a581-bb026439002a');" />
+    			$('#photo-link').attr('href','https://');" />
 												</li>
 												<li>
 													<img class="image" id="school2" src='images/school2.JPG' alt="school" onclick="updateInputImg(this);
     			document.getElementById('photo-name').innerText = this.alt; 
-    			$('#photo-link').attr('href','https://ccsearch.creativecommons.org/photos/045c45c0-2fcf-45d7-b866-5599b2196fed');" />
+    			$('#photo-link').attr('href','');" />
 												</li>
 												<li>
 													<img class="image" id="school3" src='images/school3.JPG' alt="school" onclick="updateInputImg(this);
     			document.getElementById('photo-name').innerText = this.alt; 
-    			$('#photo-link').attr('href','https://ccsearch.creativecommons.org/photos/11fe5fbc-dbbb-4be3-9238-41cd7047256e');" />
+    			$('#photo-link').attr('href','');" />
 												</li>
 												<li>
 													<img class="image" id="ShanghaiCenter" src='images/ShanghaiCenter.jpg' alt="Shangha iCenter" onclick="updateInputImg(this);
