--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 												<li>
 													<img class="image" id="school1" src='images/school1.JPG' alt="school" onclick="updateInputImg(this);
     			document.getElementById('photo-name').innerText = this.alt; 
-    			$('#photo-link').attr('href','https://');" />
+    			$('#photo-link').attr('href','');" />
 												</li>
 												<li>
 													<img class="image" id="school2" src='images/school2.JPG' alt="school" onclick="updateInputImg(this);
